// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Permission edit modal Submit button text should be Create when user is creating tenant 1`] = `
<EuiButtonDisplay
  baseClassName="euiButton"
  disabled={false}
  element="button"
  fill={true}
  id="submit"
  isDisabled={false}
  onClick={[Function]}
  type="button"
>
  Create
</EuiButtonDisplay>
`;

exports[`Permission edit modal Submit button text should be Save when user is updating tenant 1`] = `
<EuiButtonDisplay
  baseClassName="euiButton"
  disabled={false}
  element="button"
  fill={true}
  id="submit"
  isDisabled={false}
  onClick={[Function]}
  type="button"
>
  Save
</EuiButtonDisplay>
`;
